units: lower ioweight to improve system responsiveness
Updates will happen in the background during normal system operation.
They must not have a significant impact on system responsiveness.
Slowing down updates to keep the system available for users is
desirable.

Change-Id: I8868966190b1eba6664bd7e08d524aecdb3e784f
Signed-off-by: Timothée Ravier <timothee.ravier@ssi.gouv.fr>

--- a/units/updater.service
+++ b/units/updater.service
@@ -5,3 +5,5 @@ ConditionPathExists=!/run/update_ready
 [Service]
 Type=simple
 ExecStart=/usr/bin/updater
+# Lower IOWeight to keep the system responsive during background updates
+IOWeight=10
